# MiniPs

./: .gitignore  CMakeLists.txt  README.md  addition_feature.md  report.md
apps/: CMakeLists.txt
apps/basic/: CMakeLists.txt  basic_example.cpp
apps/kmeans/: CMakeLists.txt  kmeans.cpp  kmeans_helper.hpp
apps/logistic_regression/: CMakeLists.txt  lr_example.cpp
apps/mnist/: CMakeLists.txt  mnist_example.cpp
apps/svm/: CMakeLists.txt  svm_example.cpp
base/: CMakeLists.txt  abstract_id_mapper.hpp  abstract_partition_manager.hpp  actor_model.hpp  context.cpp  context.hpp  magic.hpp  message.hpp  message_test.cpp  node.hpp  node_utils.cpp  node_utils.hpp  range_partition_manager.hpp  range_partition_manager_test.cpp  serialization.cpp  serialization.hpp  threadsafe_queue.hpp  utils.hpp  zmq_helper.hpp
cmake/: dep.cmake
comm/: CMakeLists.txt  abstract_mailbox.hpp  abstract_sender.hpp  mailbox.cpp  mailbox.hpp  mailbox_test.cpp  sender.cpp  sender.hpp  sender_test.cpp
config/: clusternode  clusternodes  instances  localnodes  wl14  wl5
driver/: CMakeLists.txt  engine.cpp  engine.hpp  engine_test.cpp  info.hpp  ml_task.hpp  simple_id_mapper.cpp  simple_id_mapper.hpp  simple_id_mapper_test.cpp  worker_spec.cpp  worker_spec.hpp  worker_spec_test.cpp
io/: CMakeLists.txt  coordinator.cpp  coordinator.hpp  hdfs_assigner.cpp  hdfs_assigner.hpp  hdfs_file_splitter.cpp  hdfs_file_splitter.hpp  hdfs_manager.cpp  hdfs_manager.hpp  line_input_format.hpp
lib/: CMakeLists.txt  abstract_aync_data_loader.hpp  abstract_data_loader.hpp  batch_data_sampler.cpp  labeled_sample.hpp  parser.hpp  svm_dumper.hpp
local/: dump_0  dump_1
master/: CMakeLists.txt  heartbeat_check_thread.cpp  heartbeat_check_thread.hpp  master.hpp  master_thread.cpp  master_thread.hpp
report/: application_proposal.md  report.md
scripts/: basic_example.py  batch_ops.py  kmeans.py  launch_on_yarn.py  launch_utils.py  logistic_regression.py
scripts/yarn/local/: launch_on_yarn.py  yarn_example.py
scripts/yarn/remote/: helloworld.py  hostfile  launch_on_yarn.py  yarn_example.py
server/: CMakeLists.txt  abstract_model.hpp  abstract_storage.hpp  map_storage.hpp  map_storage_test.cpp  server_thread.cpp  server_thread.hpp  server_thread_test.cpp  vector_storage.hpp
server/consistency/: asp_model.cpp  asp_model.hpp  asp_model_test.cpp  bsp_model.cpp  bsp_model.hpp  bsp_model_test.cpp  ssp_model.cpp  ssp_model.hpp  ssp_model_test.cpp
server/util/: pending_buffer.cpp  pending_buffer.hpp  pending_buffer_test.cpp  progress_tracker.cpp  progress_tracker.hpp  progress_tracker_test.cpp
test/: CMakeLists.txt  test_hdfs_read.cpp  test_main.cpp  test_server.cpp  test_worker.cpp
worker/: CMakeLists.txt  abstract_callback_runner.hpp  kv_client_table.hpp  kv_client_table_test.cpp  worker_thread.cpp  worker_thread.hpp
yarn/src/main/java/cn/edu/buaa/act/petuumOnYarn/: ApplicationMaster.java  Client.java
